[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/Gate_Selection.tscn" type="PackedScene" id=1]
[ext_resource path="res://Gates/boundary_box/bounding_box.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Check_Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Clear_Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Load_Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Save_Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/Set_Prof_Mode.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Set_Prof_Mode.gd" type="Script" id=8]
[ext_resource path="res://game_simulator.gd" type="Script" id=9]
[ext_resource path="res://UI/Load_Button.gd" type="Script" id=10]
[ext_resource path="res://UI/Save_Button.gd" type="Script" id=11]
[ext_resource path="res://UI/Clear_Button.gd" type="Script" id=12]
[ext_resource path="res://UI/Gate_Selection.gd" type="Script" id=13]
[ext_resource path="res://UI/Check_Button.gd" type="Script" id=14]

[node name="game_simulator" type="Node2D"]
script = ExtResource( 9 )

[node name="Gate_Selection" type="Node2D" parent="." groups=["UI"] instance=ExtResource( 1 )]
position = Vector2( 1, 4 )
script = ExtResource( 13 )

[node name="boundary_box" type="StaticBody2D" parent="." groups=["bounding_box"] instance=ExtResource( 2 )]
position = Vector2( 151, 0 )

[node name="Check_Button" type="Node2D" parent="." groups=["UI"] instance=ExtResource( 3 )]
visible = false
position = Vector2( 760, 497 )
script = ExtResource( 14 )

[node name="Clear_Button" type="Node2D" parent="." groups=["UI"] instance=ExtResource( 4 )]
position = Vector2( 872, 419 )
script = ExtResource( 12 )

[node name="Node2D" type="Node2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 925, 321 )
script = ExtResource( 10 )

[node name="Save_Button" type="Node2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 898, 234 )
script = ExtResource( 11 )

[node name="Set_Prof_Mode" type="Node2D" parent="." instance=ExtResource( 7 )]
position = Vector2( 867, 162 )
script = ExtResource( 8 )
